gccida/g3/ix86_preferred_reload_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12741:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  ix86_preferred_reload_class( rtx x, reg_class a2) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12741:48: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  ix86_preferred_reload_class( rtx x, reg_class a2) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12744:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12756:48: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( v4 = *( ( unsigned __int8 *)x + 2), ( *( &mode_class_0 + v4) & 0xFFFFFFFB) != 2) 
                                               ^~~~~~~~~~~~
                                               mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12756:67: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
|| ( v4 = *( ( unsigned __int8 *)x + 2), ( *( &mode_class_0 + v4) & 0xFFFFFFFB) != 2) 
                                           ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/i386.c:12757:19: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& *( ( _DWORD *)&mode_class_0 + v4) != 8 
                  ^~~~~~~~~~~~
                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_preferred_reload_class/src/obj/i386.o] Error 1
